// Generated by srotoc. DO NOT EDIT!

syntax = "proto3";

package droto;

option go_package = "github.com/tomlinford/droto";

import "google/protobuf/descriptor.proto";

extend google.protobuf.FieldOptions {
    CharFieldOptions char_field_options = 6062;
}

extend google.protobuf.FieldOptions {
    FieldOptions field_options = 6061;
}

extend google.protobuf.FileOptions {
    repeated ModelSerializer model_serializers = 6063;
}

message CharFieldOptions {
    int32 max_length = 1;
}

message FieldOptions {
    bool nullable = 1;
    string db_column = 2;
}

message ModelSerializer {
    string models_go_package = 1;
    string model_name = 2;
    string view_go_package = 3;
    string view_message_name = 4;
    repeated string fields_arr = 5;
}
